# polibase

./: .bandit  .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CLAUDE.md.bak  COMMANDS.md  Dockerfile  Dockerfile.cloudrun  OPTIMIZATION_SUMMARY.md  README.md  TEST_FIX_SUMMARY.md  TEST_IMPROVEMENT_SUMMARY.md  backup-database.sh  check_gcs_minutes.py  claude_project.json  cloudbuild.yaml  coverage.xml  docker-compose.temp.yml  docker-compose.yml  justfile  main.py  minutes_dividor.py  minutes_process_agent.py  polibase.dbml  product_goal.md  pyproject.toml  pyrightconfig.json  reset-database.sh  setup_database.sh  test-setup.sh  update_speaker_links.py  update_speaker_links_llm.py  update_speaker_links_llm_refactored.py
.claude/: settings.json  statusline.js
.githooks/: post-checkout
.github/: codecov.yml  copilot-instructions.md
.serena/: project.yml
.streamlit/: secrets.toml.example
data/: city_and_prefecture_code.csv
database/: 02_run_migrations.sql  init.sql  init_ci.sql  run_migrations.sql  seed_conferences.sql  seed_conferences_generated.sql  seed_governing_bodies.sql  seed_governing_bodies_generated.sql  seed_meetings_generated.sql  seed_parliamentary_groups_generated.sql  seed_political_parties.sql  seed_political_parties_generated.sql  seed_politicians_generated.sql
docker/: Dockerfile  docker-compose.ci.yml  docker-compose.monitoring.yml  docker-compose.temp.yml  docker-compose.yml
docs/: ARCHITECTURE.md  AUTHENTICATION.md  BI_DASHBOARD.md  CI_CD_ENHANCEMENTS.md  CLEAN_ARCHITECTURE_MIGRATION.md  DATA_COVERAGE_METRICS.md  DEPLOYMENT.md  DI_CONTAINER_GUIDE.md  GOOGLE_AUTH_SETUP.md  REPOSITORY_MIGRATION_GUIDE.md  TYPE_SAFETY_GUIDELINES.md  application_data_flow.drawio  error-handling.md  llm-evaluation.md  minutes_division_flow.drawio  pydantic_migration_summary.md  pydantic_usage_report.md  sentry-integration.md  structured_logging_guide.md
scripts/: backup-database-gcs.py  backup-database.sh  cloud_sql_proxy_setup.sh  deploy_to_cloud_run.sh  docker-entrypoint.sh  docker-uv-wrapper.sh  migrate_politicians_to_extracted.py  migrate_to_cloud_sql.sh  reset-database.sh  setup-git-hooks.sh  setup-streamlit-secrets.sh  setup-worktree-ports.sh  setup_database.sh  test-setup.sh  test_cloud_run_locally.sh  verify_logging.py  verify_metrics.py  verify_metrics_simple.py  verify_monitoring.py
src/: __init__.py  cli.py  exceptions.py  extract_politicians.py  extract_politicians.py.disabled  extract_speakers_from_minutes.py  main.py  main2.py  monitoring_app.py  process_minutes.py  seed_generator.py  streamlit_app.py  update_speaker_links.py  update_speaker_links_llm.py
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: TESTING_GUIDE.md  ci_smoke_test.py  conftest.py  pytest.ini  test_backward_compatibility.py  test_cli_scraping_commands.py  test_conference_member_commands.py  test_conference_member_extractor.py  test_conference_member_matching_service.py  test_conversation_repository.py  test_deleted_modules.py  test_exceptions.py  test_extract_speakers_from_minutes.py  test_extracted_conference_member_repository.py  test_kaigiroku_net_scraper.py  test_langgraph_party_scraping_agent.py  test_llm_service_basic.py  test_llm_service_integration.py  test_llm_services.py  test_logging_sentry_integration.py  test_meeting_repository.py  test_member_extractor_tool.py  test_minutes_boundary_detection.py  test_minutes_divider.py  test_minutes_dividor.py  test_opentelemetry_metrics.py  test_process_minutes.py  (+18 more)
(+843 files in other folders)
