[project]
name = "polibase"
version = "0.1.0"
description = ""
authors = [{ name = "okodoon", email = "31516823+okodoon@users.noreply.github.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "langchain-google-genai>=2.0.11,<3",
    "langchain>=0.3.20,<0.4",
    "langgraph>=0.3.5,<0.4",
    "pypdfium2>=4.30.1,<5",
    "python-dotenv>=1.0.1,<2",
    "duckdb>=1.2.1,<2",
    "pytest>=8.3.5,<9",
    "psycopg2-binary>=2.9.0,<3",
    "sqlalchemy>=2.0.0,<3",
    "click>=8.0.0,<9",
]

[project.scripts]
polibase = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
