[project]
name = "polibase"
version = "0.1.0"
description = ""
authors = [{ name = "okodoon", email = "31516823+okodoon@users.noreply.github.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "langchain-google-genai>=2.0.11,<3",
    "langchain>=0.3.20,<0.4",
    "langgraph>=0.3.5,<0.4",
    "pypdfium2>=4.30.1,<5",
    "python-dotenv>=1.0.1,<2",
    "duckdb>=1.2.1,<2",
    "pytest>=8.3.5,<9",
    "psycopg2-binary>=2.9.0,<3",
    "sqlalchemy>=2.0.0,<3",
    "click>=8.0.0,<9",
    "streamlit>=1.29.0,<2",
    "selenium>=4.0.0,<5",
    "playwright>=1.40.0,<2",
    "beautifulsoup4>=4.12.0,<5",
    "aiohttp>=3.9.0,<4",
    "requests>=2.31.0,<3",
    "google-cloud-storage>=2.10.0,<3",
    "plotly>=5.18.0,<6",
    "pandas>=2.0.0,<3",
    "folium>=0.15.0,<1",
    "streamlit-folium>=0.17.0,<1",
    "pydantic>=2.0.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
polibase = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.387",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
